menambahkan paragraf pada file index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus molestias et ipsam maiores illum, dolore dolorem libero placeat, voluptas ad nesciunt ratione ullam quos possimus unde fuga nostrum laboriosam praesentium.</p>
 </body>
 </html>
